Fixed alignment mistake in scss

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3527,8 +3527,6 @@ body {
   body header {
     margin: 2em 0 3em 0;
     text-align: center; }
-    body header:not(.main-header) {
-      text-align: left !important; }
     body header .avatar {
       margin-bottom: 1em;
       display: inline-block;
