--- a/assets/scss/_styles.scss
+++ b/assets/scss/_styles.scss
@@ -46,7 +46,7 @@ body {
 		margin: 2em 0 3em 0;
 		text-align: center;
 		&:not(.main-header) {
-			text-align: left !important;
+			// text-align: left !important;
 		}
 		.avatar {
 			margin-bottom: 1em;
